# tpRigToolkit-tools-cookiecutter

./: README.md  README.rst  cookiecutter.json  requirements.txt
tpRigToolkit-tools-{{cookiecutter.tool_name}}/: MANIFEST.in  README.rst  requirements.txt  setup.cfg
tpRigToolkit-tools-{{cookiecutter.tool_name}}/docs/sphinx/: conf.py  index.rst
tpRigToolkit-tools-{{cookiecutter.tool_name}}/docs/sphinx/_templates/: layout.html
tpRigToolkit-tools-{{cookiecutter.tool_name}}/tests/: test_general.py
tpRigToolkit-tools-{{cookiecutter.tool_name}}/tpRigToolkit/tools/{{cookiecutter.tool_name}}/: __init__.py  __logging__.ini  __version__.py  _version.py  loader.py  {{cookiecutter.tool_name}}.py
tpRigToolkit-tools-{{cookiecutter.tool_name}}/tpRigToolkit/tools/{{cookiecutter.tool_name}}/core/: client.py  consts.py  controller.py  model.py  tool.py  toolset.py  view.py
